--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A simple template generator for frontend codebases",
   "main": "./bin/index.js",
+  "type": "module",
   "bin": {
     "cue": "./bin/index.js"
   },
@@ -27,6 +28,8 @@
   },
   "homepage": "https://github.com/qt-coder/cue#readme",
   "dependencies": {
+    "chalk": "^5.0.1",
+    "chalk-animation": "^1.3.0",
     "figlet": "^1.5.2",
     "inquirer": "^8.2.1",
     "shelljs": "^0.8.5"
